# playground

./: .gitignore  CLAUDE.md  README.md
ai_tools/: npm_install.md
algorithm/: binary_search.py  binarysearch.py  dijkstra.py  lfu.py  linkedlist.py  lru.py  math_ops.py  pascal_triangle.py  radixtree.py  readme-basics.md  readme-problems.md  readme.md  readme_problems.md  search.py  sort.py  test.py  tree.py  trietree.py  union_find.py
aws/: ec2-readme.md
bash/: generate_file.sh  readme.md  test1.sh  test2.sh
chrome/: extension.md
cicd/: docker-compose.md
cli/: py-curses.py
cpp/: .gitignore  array.cpp  compile.md  condition.cpp  enum.cpp  exception.cpp  file.cpp  function.cpp  header.cpp  header_sum.h  helloworld.cpp  input.cpp  loop.cpp  map.cpp  namespace.cpp  oop.cpp  operator.cpp  radix.cpp  radix.h  reference_pointer.cpp  set.cpp  smart_pointer.cpp  string.cpp  structure.cpp  switch.cpp  template.cpp  trie.h  variable.cpp  vector.cpp
cpu/: nop.c
cuda/: check_version.py  install.md  readme.md  run_test_nccl.sh  test_nccl.py
databricks/: sql.md
delta/: create.md  merge.md
design_pattern/: factory.md  template.md
ebpf/: example.py  hello_world.py  monitor.c  readme.md
elasticsearch/: readme.md  setup.md
fs/: juicefs.md  overlayfs.md
git/: commands.md  git_clone.sh  gitignore.md  lfs.md  rebase_test_file.md
glibc/: memory_leak.c  readme.md
go/: go.mod  go.sum  go.work
gpg/: readme.md
jetson/: readme.md
k8s/: kubectl.md  minikube.md
linux/: ss.md  (+1 more)
opendal/rust/s3test/: Cargo.toml
opendal/rust/s3test/src/: aws.rs  gcs.rs  main.rs
(+1056 files in other folders)
