[package]
name = "s3test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["reqwest/rustls-tls-native-roots"]
native-tls = ["reqwest/native-tls"]

[dependencies]
opendal = { path = "/Users/temp/Documents/incubator-opendal/core" }
reqwest = { version = "0.11.16", default-features = false }
config = { version = "0.13.1", features = ["toml"] }
log = { version = "0.4" }
tokio = { version = "1", features = ["full"] }